Refresh UI with social-friendly styling

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tylendar | Unified Calendar Experience</title>
+    <title>Tylendar | Social Calendar Space</title>
     <link rel="stylesheet" href="/static/styles.css" />
   </head>
   <body>
@@ -12,45 +12,48 @@
         <div class="logo">Tylendar</div>
         <div class="nav-links">
           <a href="#home">Home</a>
-          <a href="#user">User</a>
+          <a href="#user">Profiles</a>
           <a href="#dashboard">Dashboards</a>
-          <a href="#calendar">Calendar Views</a>
+          <a href="#calendar">Calendar</a>
           <a href="#access">Access</a>
           <a href="#messageboard">MessageBoard</a>
         </div>
-        <button class="primary">Request Demo</button>
+        <div class="nav-actions">
+          <button class="ghost">Log in</button>
+          <button class="primary">Register</button>
+        </div>
       </nav>
-      <section class="hero-content" id="home">
+      <section class="hero-banner" id="home">
         <div>
-          <p class="eyebrow">Enterprise Calendar System</p>
-          <h1>Beautiful scheduling, trusted permissions, and an experience teams love.</h1>
+          <p class="eyebrow">Welcome to your social calendar space</p>
+          <h1>Plan together, celebrate together, and keep every moment connected.</h1>
           <p class="subheading">
-            Tylendar orchestrates every calendar touchpoint—from user profiles to organization
-            dashboards—with clarity, security, and elegant workflows.
+            Tylendar feels like a friendly social feed for your events, with soft visuals, quick
+            glance views, and cozy collaboration.
           </p>
           <div class="hero-actions">
-            <button class="primary">Start Planning</button>
-            <button class="secondary">Explore Features</button>
+            <button class="primary">Join the community</button>
+            <button class="secondary">Take a quick tour</button>
           </div>
         </div>
         <div class="hero-card">
-          <div class="hero-card__title">System Health</div>
-          <div class="hero-card__metric">98% permission compliance</div>
-          <p class="hero-card__detail">Live insights across 48 active events.</p>
+          <div class="hero-card__title">Community Pulse</div>
+          <div class="hero-card__metric">48 friends planning together</div>
+          <p class="hero-card__detail">See what everyone is up to, in one soft glow.</p>
           <div class="hero-card__badges">
-            <span>Realtime</span>
-            <span>Secure</span>
-            <span>Unified</span>
+            <span>Friendly</span>
+            <span>Supportive</span>
+            <span>Shared</span>
           </div>
         </div>
       </section>
     </header>
 
-    <main>
+    <main class="main">
       <section class="section" id="user">
         <div class="section-heading">
           <h2>User Management & Profile</h2>
-          <p>Profile intelligence, personalized notifications, and quick actions.</p>
+          <p>Personal profiles, gentle reminders, and your social rhythm.</p>
         </div>
         <div class="grid two">
           <div class="card" id="profile-card"></div>
@@ -61,7 +64,7 @@
       <section class="section" id="dashboard">
         <div class="section-heading">
           <h2>Dashboards</h2>
-          <p>High signal views for individual focus and organization-wide health.</p>
+          <p>Quick vibes for you and the crew without endless scrolling.</p>
         </div>
         <div class="grid two">
           <div class="card" id="user-dashboard"></div>
@@ -72,7 +75,7 @@
       <section class="section" id="calendar">
         <div class="section-heading">
           <h2>Calendar & Event Views</h2>
-          <p>Navigate month, 2-week, week, and day views alongside rich list filters.</p>
+          <p>Month, 2-week, week, and day snapshots with list highlights.</p>
         </div>
         <div class="grid two">
           <div class="card" id="calendar-view"></div>
@@ -83,7 +86,7 @@
       <section class="section" id="access">
         <div class="section-heading">
           <h2>Manage Access</h2>
-          <p>Granular permission assignments across users, roles, and calendars.</p>
+          <p>Kind boundaries with clear permissions for every calendar.</p>
         </div>
         <div class="card" id="access-matrix"></div>
       </section>
@@ -91,7 +94,7 @@
       <section class="section" id="messageboard">
         <div class="section-heading">
           <h2>Event MessageBoard</h2>
-          <p>Collaborate with context-rich comments tied directly to events.</p>
+          <p>Chat, cheer, and keep conversations next to the moments.</p>
         </div>
         <div class="card" id="message-board"></div>
       </section>
@@ -100,12 +103,12 @@
     <footer class="footer">
       <div>
         <strong>Tylendar</strong>
-        <p>Modern calendar intelligence for teams that move fast.</p>
+        <p>Social scheduling that feels warm, welcoming, and easy.</p>
       </div>
       <div class="footer-links">
-        <a href="#">Security</a>
-        <a href="#">Status</a>
-        <a href="#">Docs</a>
+        <a href="#">Safety</a>
+        <a href="#">Community</a>
+        <a href="#">Help</a>
       </div>
     </footer>
 
