Implement enterprise calendar enhancements

--- a/client/details.html
+++ b/client/details.html
@@ -17,6 +17,13 @@
           <a href="#calendar">Calendar</a>
           <a href="#access">Access</a>
           <a href="#messageboard">MessageBoard</a>
+          <a href="#embed">Embed</a>
+          <a href="#sharing">Sharing</a>
+          <a href="#audit">Audit</a>
+          <a href="#roles">Roles</a>
+          <a href="#resilience">Resilience</a>
+          <a href="#developer">Developer</a>
+          <a href="#observability">Observability</a>
         </div>
         <div class="nav-actions">
           <button class="ghost">Log in</button>
@@ -97,6 +104,65 @@
           <p>Chat, cheer, and keep conversations next to the moments.</p>
         </div>
         <div class="card" id="message-board"></div>
+      </section>
+
+      <section class="section" id="embed">
+        <div class="section-heading">
+          <h2>Calendar Embed Widget</h2>
+          <p>Portable calendar previews that call the core API.</p>
+        </div>
+        <div class="card" id="embed-widget"></div>
+      </section>
+
+      <section class="section" id="sharing">
+        <div class="section-heading">
+          <h2>Social Sharing & Export</h2>
+          <p>Share links and export formats that keep time zones intact.</p>
+        </div>
+        <div class="card" id="sharing-options"></div>
+      </section>
+
+      <section class="section" id="audit">
+        <div class="section-heading">
+          <h2>Audit History</h2>
+          <p>Beautiful, readable histories of every calendar decision.</p>
+        </div>
+        <div class="card" id="audit-history"></div>
+      </section>
+
+      <section class="section" id="roles">
+        <div class="section-heading">
+          <h2>Role & Permission Management</h2>
+          <p>Define roles, assign owners, and keep permissions current.</p>
+        </div>
+        <div class="card" id="role-management"></div>
+      </section>
+
+      <section class="section" id="resilience">
+        <div class="section-heading">
+          <h2>Fault Tolerance</h2>
+          <p>Retries, circuit breakers, and graceful fallbacks.</p>
+        </div>
+        <div class="card" id="fault-tolerance"></div>
+      </section>
+
+      <section class="section" id="developer">
+        <div class="section-heading">
+          <h2>API Documentation & Developer Portal</h2>
+          <p>Specs, webhooks, and embed toolkits in one hub.</p>
+        </div>
+        <div class="card" id="developer-portal"></div>
+      </section>
+
+      <section class="section" id="observability">
+        <div class="section-heading">
+          <h2>Observability & Alerts</h2>
+          <p>Operational dashboards and proactive alerting.</p>
+        </div>
+        <div class="grid two">
+          <div class="card" id="observability"></div>
+          <div class="card" id="operational-alerts"></div>
+        </div>
       </section>
     </main>
 
