--- a/client/details.html
+++ b/client/details.html
@@ -56,7 +56,7 @@
       </section>
     </header>
 
-    <main class="main">
+    <main class="main feature-preview">
       <section class="section" id="user">
         <div class="section-heading">
           <h2>User Management & Profile</h2>
