Make organization optional during registration

--- a/client/index.html
+++ b/client/index.html
@@ -67,8 +67,8 @@
             </label>
             <label class="auth-field">
               <span>Organization ID</span>
-              <input type="text" name="organizationId" value="org-1" required />
-              <small>Tylendar Community default is <strong>org-1</strong>.</small>
+              <input type="text" name="organizationId" placeholder="org-1 (optional)" />
+              <small>Optional. Leave blank or use <strong>org-1</strong> for the community space.</small>
             </label>
             <label class="auth-field">
               <span>Role</span>
