Enhance homepage directory and calendar view

--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,57 @@
       </section>
     </header>
 
+    <main class="home-directory">
+      <section class="section">
+        <div class="section-heading">
+          <h2>Your feature directory</h2>
+          <p>Jump straight into the spaces that keep your plans, people, and permissions aligned.</p>
+        </div>
+        <div class="directory-grid">
+          <a class="directory-card" href="/details.html#user">
+            <div class="directory-card__title">Profile & Presence</div>
+            <div class="directory-card__meta">Keep your status, focus, and notifications in sync.</div>
+          </a>
+          <a class="directory-card" href="/details.html#dashboard">
+            <div class="directory-card__title">Dashboards</div>
+            <div class="directory-card__meta">Quick pulses for personal and organization health.</div>
+          </a>
+          <a class="directory-card" href="/details.html#calendar">
+            <div class="directory-card__title">Calendar Views</div>
+            <div class="directory-card__meta">Month, week, and day perspectives with focus cues.</div>
+          </a>
+          <a class="directory-card" href="/details.html#access">
+            <div class="directory-card__title">Manage Access</div>
+            <div class="directory-card__meta">Audit and update permissions in one clear table.</div>
+          </a>
+          <a class="directory-card" href="/details.html#messageboard">
+            <div class="directory-card__title">MessageBoard</div>
+            <div class="directory-card__meta">Keep event conversations warm and contextual.</div>
+          </a>
+          <a class="directory-card" href="/details.html#sharing">
+            <div class="directory-card__title">Sharing & Export</div>
+            <div class="directory-card__meta">Send links or export schedules with perfect time zones.</div>
+          </a>
+          <a class="directory-card" href="/details.html#audit">
+            <div class="directory-card__title">Audit History</div>
+            <div class="directory-card__meta">Trace changes with a beautiful, readable timeline.</div>
+          </a>
+          <a class="directory-card" href="/details.html#roles">
+            <div class="directory-card__title">Roles & Permissions</div>
+            <div class="directory-card__meta">Fine-tune team access and ownership.</div>
+          </a>
+          <a class="directory-card" href="/details.html#developer">
+            <div class="directory-card__title">Developer Portal</div>
+            <div class="directory-card__meta">API specs, widgets, and integration guidance.</div>
+          </a>
+          <a class="directory-card" href="/details.html#observability">
+            <div class="directory-card__title">Observability</div>
+            <div class="directory-card__meta">Stay ahead of uptime, latency, and alerting.</div>
+          </a>
+        </div>
+      </section>
+    </main>
+
     <div class="auth-modal" id="auth-modal" aria-hidden="true">
       <div class="auth-modal__backdrop" data-auth-close></div>
       <div class="auth-modal__card" role="dialog" aria-modal="true" aria-labelledby="auth-title">
