--- a/client/details.html
+++ b/client/details.html
@@ -3,27 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tylendar | Home Details</title>
+    <title>Tylendar | Experience Overview</title>
     <link rel="stylesheet" href="/static/styles.css" />
   </head>
   <body>
-    <header class="hero">
+    <header class="hero hero--page">
       <nav class="nav">
-        <div class="logo">Tylendar</div>
-        <div class="nav-links">
+        <a class="logo" href="/">Tylendar</a>
+        <div class="nav-links nav-links--compact">
           <a href="/">Home</a>
-          <a href="#user">Profiles</a>
-          <a href="#dashboard">Dashboards</a>
-          <a href="#calendar">Calendar</a>
-          <a href="#access">Access</a>
-          <a href="#messageboard">MessageBoard</a>
-          <a href="#embed">Embed</a>
-          <a href="#sharing">Sharing</a>
-          <a href="#audit">Audit</a>
-          <a href="#roles">Roles</a>
-          <a href="#resilience">Resilience</a>
-          <a href="#developer">Developer</a>
-          <a href="#observability">Observability</a>
+          <a href="/profiles">Profiles</a>
+          <a href="/dashboards">Dashboards</a>
+          <a href="/calendar">Calendar</a>
+          <a href="/access">Access</a>
+          <a href="/messageboard">MessageBoard</a>
+          <a href="/embed">Embed</a>
+          <a href="/sharing">Sharing</a>
+          <a href="/audit">Audit</a>
+          <a href="/roles">Roles</a>
+          <a href="/resilience">Resilience</a>
+          <a href="/developer">Developer</a>
+          <a href="/observability">Observability</a>
         </div>
         <div class="nav-actions">
           <span class="auth-status" data-auth-status>Not signed in</span>
@@ -31,138 +31,86 @@
           <button class="primary" data-auth-trigger="register">Register</button>
         </div>
       </nav>
-      <section class="hero-banner" id="home">
+      <section class="hero-banner">
         <div>
-          <p class="eyebrow">Welcome to your social calendar space</p>
-          <h1>Plan together, celebrate together, and keep every moment connected.</h1>
+          <p class="eyebrow">Experience Overview</p>
+          <h1>Every Tylendar experience now has a focused, dedicated page.</h1>
           <p class="subheading">
-            Tylendar feels like a friendly social feed for your events, with soft visuals, quick
-            glance views, and cozy collaboration.
+            Use this hub to jump into the exact view you need without juggling a crowded homepage.
           </p>
           <div class="hero-actions">
-            <button class="primary">Join the community</button>
-            <button class="secondary">Take a quick tour</button>
+            <a class="primary" href="/calendar">Go to calendar focus</a>
+            <a class="secondary" href="/dashboards">Check dashboards</a>
           </div>
         </div>
         <div class="hero-card">
-          <div class="hero-card__title">Community Pulse</div>
-          <div class="hero-card__metric">48 friends planning together</div>
-          <p class="hero-card__detail">See what everyone is up to, in one soft glow.</p>
+          <div class="hero-card__title">Focus-first navigation</div>
+          <div class="hero-card__metric">12 dedicated views</div>
+          <p class="hero-card__detail">Each page keeps the context, actions, and data in one place.</p>
           <div class="hero-card__badges">
-            <span>Friendly</span>
-            <span>Supportive</span>
-            <span>Shared</span>
+            <span>Clear</span>
+            <span>Purpose-built</span>
+            <span>Fast</span>
           </div>
         </div>
       </section>
     </header>
 
-    <main class="main feature-preview">
-      <section class="section" id="user">
+    <main class="page-content">
+      <section class="section">
         <div class="section-heading">
-          <h2>User Management & Profile</h2>
-          <p>Personal profiles, gentle reminders, and your social rhythm.</p>
+          <h2>Navigate by focus</h2>
+          <p>Select the view that matches your next task.</p>
         </div>
-        <div class="grid two">
-          <div class="card" id="profile-card"></div>
-          <div class="card" id="home-highlights"></div>
-        </div>
-      </section>
-
-      <section class="section" id="dashboard">
-        <div class="section-heading">
-          <h2>Dashboards</h2>
-          <p>Quick vibes for you and the crew without endless scrolling.</p>
-        </div>
-        <div class="grid two">
-          <div class="card" id="user-dashboard"></div>
-          <div class="card" id="org-dashboard"></div>
-        </div>
-      </section>
-
-      <section class="section" id="calendar">
-        <div class="section-heading">
-          <h2>Calendar & Event Views</h2>
-          <p>Month, 2-week, week, and day snapshots with list highlights.</p>
-        </div>
-        <div class="grid two">
-          <div class="card" id="calendar-view"></div>
-          <div class="card" id="event-list"></div>
-        </div>
-      </section>
-
-      <section class="section" id="access">
-        <div class="section-heading">
-          <h2>Manage Access</h2>
-          <p>Kind boundaries with clear permissions for every calendar.</p>
-        </div>
-        <div class="card" id="access-matrix"></div>
-      </section>
-
-      <section class="section" id="messageboard">
-        <div class="section-heading">
-          <h2>Event MessageBoard</h2>
-          <p>Chat, cheer, and keep conversations next to the moments.</p>
-        </div>
-        <div class="card" id="message-board"></div>
-      </section>
-
-      <section class="section" id="embed">
-        <div class="section-heading">
-          <h2>Calendar Embed Widget</h2>
-          <p>Portable calendar previews that call the core API.</p>
-        </div>
-        <div class="card" id="embed-widget"></div>
-      </section>
-
-      <section class="section" id="sharing">
-        <div class="section-heading">
-          <h2>Social Sharing & Export</h2>
-          <p>Share links and export formats that keep time zones intact.</p>
-        </div>
-        <div class="card" id="sharing-options"></div>
-      </section>
-
-      <section class="section" id="audit">
-        <div class="section-heading">
-          <h2>Audit History</h2>
-          <p>Beautiful, readable histories of every calendar decision.</p>
-        </div>
-        <div class="card" id="audit-history"></div>
-      </section>
-
-      <section class="section" id="roles">
-        <div class="section-heading">
-          <h2>Role & Permission Management</h2>
-          <p>Define roles, assign owners, and keep permissions current.</p>
-        </div>
-        <div class="card" id="role-management"></div>
-      </section>
-
-      <section class="section" id="resilience">
-        <div class="section-heading">
-          <h2>Fault Tolerance</h2>
-          <p>Retries, circuit breakers, and graceful fallbacks.</p>
-        </div>
-        <div class="card" id="fault-tolerance"></div>
-      </section>
-
-      <section class="section" id="developer">
-        <div class="section-heading">
-          <h2>API Documentation & Developer Portal</h2>
-          <p>Specs, webhooks, and embed toolkits in one hub.</p>
-        </div>
-        <div class="card" id="developer-portal"></div>
-      </section>
-
-      <section class="section" id="observability">
-        <div class="section-heading">
-          <h2>Observability & Alerts</h2>
-          <p>Operational dashboards and proactive alerting.</p>
-        </div>
-        <div class="grid two">
-          <div class="card" id="observability"></div>
-          <div class="card" id="operational-alerts"></div>
+        <div class="directory-grid">
+          <a class="directory-card" href="/profiles">
+            <div class="directory-card__title">Profile & Presence</div>
+            <div class="directory-card__meta">Identity, status, and activity center.</div>
+          </a>
+          <a class="directory-card" href="/dashboards">
+            <div class="directory-card__title">Dashboards</div>
+            <div class="directory-card__meta">Personal and organization pulse views.</div>
+          </a>
+          <a class="directory-card" href="/calendar">
+            <div class="directory-card__title">Calendar Views</div>
+            <div class="directory-card__meta">Full calendar focus with agenda support.</div>
+          </a>
+          <a class="directory-card" href="/access">
+            <div class="directory-card__title">Manage Access</div>
+            <div class="directory-card__meta">Assign and audit permissions.</div>
+          </a>
+          <a class="directory-card" href="/messageboard">
+            <div class="directory-card__title">MessageBoard</div>
+            <div class="directory-card__meta">Keep event conversations in context.</div>
+          </a>
+          <a class="directory-card" href="/embed">
+            <div class="directory-card__title">Embed Widget</div>
+            <div class="directory-card__meta">Drop calendar previews anywhere.</div>
+          </a>
+          <a class="directory-card" href="/sharing">
+            <div class="directory-card__title">Sharing & Export</div>
+            <div class="directory-card__meta">Links and export tooling.</div>
+          </a>
+          <a class="directory-card" href="/audit">
+            <div class="directory-card__title">Audit History</div>
+            <div class="directory-card__meta">Understand changes at a glance.</div>
+          </a>
+          <a class="directory-card" href="/roles">
+            <div class="directory-card__title">Roles & Permissions</div>
+            <div class="directory-card__meta">Manage access by role.</div>
+          </a>
+          <a class="directory-card" href="/resilience">
+            <div class="directory-card__title">Fault Tolerance</div>
+            <div class="directory-card__meta">Reliability and fallback planning.</div>
+          </a>
+          <a class="directory-card" href="/developer">
+            <div class="directory-card__title">Developer Portal</div>
+            <div class="directory-card__meta">API specs and integration guidance.</div>
+          </a>
+          <a class="directory-card" href="/observability">
+            <div class="directory-card__title">Observability</div>
+            <div class="directory-card__meta">Metrics, alerts, and uptime signals.</div>
+          </a>
         </div>
       </section>
     </main>
